--- a/struktur.html
+++ b/struktur.html
@@ -78,17 +78,18 @@
 
     <footer aria-label="Footer">
         <div class="footer-social">
-            <a href="https://www.instagram.com/pramuka_m2g" target="_blank" aria-label="Kunjungi Instagram Scout Raider MAN 2 Gresik">
+            <a href="https://www.instagram.com/pramuka_m2g?igsh=MXhyM2IxOTlzd3JleQ==" target="_blank" aria-label="Kunjungi Instagram Scout Raider MAN 2 Gresik">
                 <i class="bi bi-instagram social-icon"></i>
             </a>
-            <a href="https://www.tiktok.com/@pramuka_m2g" target="_blank" aria-label="Kunjungi TikTok Scout Raider MAN 2 Gresik">
+            <a href="https://www.tiktok.com/@pramuka_m2g?_t=ZS-90jJWgbzFsF&_r=1" target="_blank" aria-label="Kunjungi TikTok Scout Raider MAN 2 Gresik">
                 <i class="bi bi-tiktok social-icon"></i>
             </a>
-            <a href="https://www.youtube.com/@scoutraider4724" target="_blank" aria-label="Kunjungi YouTube Scout Raider MAN 2 Gresik">
+            <a href="https://youtube.com/@scoutraider4724?si=0WosJz5KZcha2fLr" target="_blank" aria-label="Kunjungi YouTube Scout Raider MAN 2 Gresik">
                 <i class="bi bi-youtube social-icon"></i>
             </a>
         </div>
         <p>&copy; 2025 Scout Raider M2G. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
