--- a/kontak.html
+++ b/kontak.html
@@ -35,8 +35,8 @@
                 <div class="card">
                     <h3>Informasi Kontak</h3>
                     <p><i class="bi bi-envelope"></i> Email: <a href="mailto:pramukam2g@gmail.com">pramukam2g@gmail.com</a></p>
-                    <p><i class="bi bi-instagram"></i> Instagram: <a href="https://www.instagram.com/@pramuka_m2g" target="_blank">@pramuka_m2g</a></p>
-                    <p><i class="bi bi-tiktok"></i> TikTok: <a href="https://www.tiktok.com/@pramuka_m2g" target="_blank">@pramuka_m2g</a></p>
+                    <p><i class="bi bi-instagram"></i> Instagram: <a href="https://www.instagram.com/pramuka_m2g?igsh=MXhyM2IxOTlzd3JleQ==" target="_blank">@pramuka_m2g</a></p>
+                    <p><i class="bi bi-tiktok"></i> TikTok: <a href="https://www.tiktok.com/@pramuka_m2g?_t=ZS-90jJWgbzFsF&_r=1" target="_blank">@pramuka_m2g</a></p>
                     <p><i class="bi bi-telephone"></i> Telepon: <a href="tel:+6282332128184">+62 823-3212-8184</a></p>
                 </div>
                 <div class="card">
@@ -67,4 +67,5 @@
         <p>&copy; 2025 Scout Raider M2G. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
