--- a/prestasi.html
+++ b/prestasi.html
@@ -79,4 +79,10 @@
         <p>&copy; 2025 Scout Raider M2G. All rights reserved.</p>
     </footer>
 </body>
+
+</html>
+        <p>&copy; 2025 Scout Raider M2G. All rights reserved.</p>
+    </footer>
+</body>
+
 </html>
